--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -19,5 +19,24 @@
           </li>
         </ul>
       </div>
+      <div class="login-logout">
+        <ul class="navbar-nav">
+          <% if(!currUser){%>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+        <%  }%>
+        <% if(currUser){%>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          <% }%>
+         
+         
+        </ul>
+      </div>
     </div>
   </nav>
