--- a/views/newProperty.ejs
+++ b/views/newProperty.ejs
@@ -5,16 +5,16 @@
         <div class="col-6 offset-2">
             <br>
     <h2>Create a New Listing</h2>
-    <form method="POST" action ="/Tripsy/newProperty?_method = PUT" >
+    <form method="POST" action ="/Tripsy/newProperty?_method = PUT" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="Title" class= "form-label" >Title</label>
             <input id="title" type="text" name ="title" placeholder="Enter Title" class="form-control" required>
         </div>
        
         <div  class="mb-3">
-            <label for="Image" class="form-label">Image url</label>
+            <label for="Image" class="form-label">Upload Image</label>
             <br>
-            <input id="image" for="image" type="text" name="image" placeholder="url" class="form-control">
+            <input id="image" for="image" type="file" name="image" class="form-control">
         </div>
         <div class="row">
         <div  class="mb-3 col-md-4">
