--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,42 +1,43 @@
 
-
-<nav class="navbar navbar-expand-md bg-body-tertiary boder-bottom sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
+  <!-- Navbar Section -->
+  <nav class="navbar navbar-expand bg-body-tertiary border-bottom sticky-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+        <!-- Logo and Listing Link -->
+        <div class="navbar-brand d-flex align-items-center">
+            <a href="/Tripsy" class="me-3"><i class="fa-regular fa-compass"></i></a>
             <a class="nav-link" href="/Tripsy">Listing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Tripsy/newProperty">Create Listing</a>
-          </li>
-        </ul>
-      </div>
-      <div class="login-logout">
-        <ul class="navbar-nav">
-          <% if(!currUser){%>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/signup">Sign Up</a>
-            </li>
-        <%  }%>
-        <% if(currUser){%>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
-          <% }%>
-         
-         
-        </ul>
-      </div>
+        </div>
+
+       <!-- Search Box -->
+<div class="search-box">
+  <div class="input-group" style="height: 50px;">
+      <input type="text" class="form-control" placeholder="Location" aria-label="Location" style="height: 50px;">
+      <input type="date" class="form-control" placeholder="Check-in" aria-label="Check-in" style="height: 50px;">
+      <input type="date" class="form-control" placeholder="Check-out" aria-label="Check-out" style="height: 50px;">
+      
+      <button class="btn-primary search-btn" type="button" style="height: 50px;">
+          <i class="bi bi-search"></i> Search
+      </button>
+  </div>
+</div>
+
+        <!-- Login/Logout Links -->
+        <div class="login-logout">
+            <ul class="navbar-nav d-flex flex-row align-items-center">
+                <li class="nav-item"><a class="nav-link" href="/Tripsy/newProperty">Create Listing</a></li>
+                <% if(!currUser){ %>
+                    <li class="nav-item"><a class="nav-link" href="/login"><b>Login</b></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/signup"><b>Sign Up</b></a></li>
+                <% } %>
+                <% if(currUser){ %>
+                    <li class="nav-item"><a class="nav-link" href="/logout"><b>Logout</b></a></li>
+                <% } %>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
+
+
+ 
+  
+
