--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,58 @@
 <% layout('/layout/boilerplate') -%>
 <body>
-    <br>
-    <h2>Listings</h2>
-    <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
-        <%for(list of listing){%>
-       
-            <a href="/Tripsy/<%=list.id%>">
-            <div class="card col " style="width: 20rem;">
+  <!-- Filters Section -->
 
-                <img src="<%=list.image.url%>" class="card-img-top" alt="<%=list.image.filename%>">
-                <div class="card-img-overlay"></div>
-
-                <div class="card-body">
-                    <b><h5 class="card-title"><%=list.title%></h5></b>
-                    <p> &#8377; <%= Number(list.price).toLocaleString('en-IN') %> /Night</p>
-
-                </div>
-              </div>
-            </a>
-        
-            <%}%>
+  <div id="filters-container" class="sticky-top">
+    <div id="filters" class="d-flex mb-4">
+      <div class="filter"><a href="/listings/category/Trending" class="filter-link"><i class="fa-solid fa-fire"></i><p>Trending</p></a></div>
+      <div class="filter"><a href="/listings/category/Rooms" class="filter-link"><i class="fa-solid fa-bed"></i><p>Rooms</p></a></div>
+      <div class="filter"><a href="/listings/category/Cities" class="filter-link"><i class="fa-solid fa-city"></i><p>Cities</p></a></div>
+      <div class="filter"><a href="/listings/category/Mountains" class="filter-link"><i class="fa-solid fa-mountain"></i><p>Mountains</p></a></div>
+      <div class="filter"><a href="/listings/category/Castles" class="filter-link"><i class="fa-brands fa-fort-awesome"></i><p>Castles</p></a></div>
+      <div class="filter"><a href="/listings/category/Amazing Pools" class="filter-link"><i class="fa-solid fa-person-swimming"></i><p>Beach/Amazing Pools</p></a></div>
+      <div class="filter"><a href="/listings/category/Camping" class="filter-link"><i class="fa-solid fa-campground"></i><p>Camping</p></a></div>
+      <div class="filter"><a href="/listings/category/Arctic" class="filter-link"><i class="fa-regular fa-snowflake"></i><p>Arctic</p></a></div>
+      <div class="filter"><a href="/listings/category/Farm" class="filter-link"><i class="fa-solid fa-cow"></i><p>Farm</p></a></div>
+  
+      <!-- Tax Toggle Switch -->
+      <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+        </div>
+      </div>
     </div>
-   
-   
-    
+  </div>
+  <br>
+  <hr>
+
+  <!-- Listings Section -->
+  <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+    <% for (list of listing) { %>
+      <a href="/Tripsy/<%= list.id %>">
+        <div class="card col" style="width: 20rem;">
+          <img src="<%= list.image.url %>" class="card-img-top" alt="<%= list.image.filename %>">
+          <div class="card-img-overlay"></div>
+          <div class="card-body">
+            <h5 class="card-title"><b><%= list.title %></b></h5>
+            <p>
+              &#8377; <%= Number(list.price).toLocaleString('en-IN') %> /Night
+              <i class="tax-info" style="display: none;">&nbsp; +18% GST </i>
+            </p>
+          </div>
+        </div>
+      </a>
+    <% } %>
+  </div>
+
+  <!-- JavaScript for Tax Toggle -->
+  <script>
+    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+    taxSwitch.addEventListener("click", () => {
+      let taxInfoElements = document.getElementsByClassName('tax-info');
+      for (let info of taxInfoElements) {
+        info.style.display = (info.style.display !== "inline") ? "inline" : "none";
+      }
+    });
+  </script>
 </body>
